// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`element style HTML mount empty style object 1`] = `<div />`;

exports[`element style HTML mount one property 1`] = `
<div
  style="top: 10px;"
/>
`;

exports[`element style HTML mount property with undefined value 1`] = `<div />`;

exports[`element style HTML mount two properties 1`] = `
<div
  style="top: 10px; left: 20px;"
/>
`;

exports[`element style HTML mount undefined 1`] = `<div />`;

exports[`element style HTML update empty style object to empty style object 1`] = `<div />`;

exports[`element style HTML update empty style object to one property 1`] = `
<div
  style="top: 10px;"
/>
`;

exports[`element style HTML update empty style object to property with undefined value 1`] = `<div />`;

exports[`element style HTML update empty style object to two properties 1`] = `
<div
  style="top: 10px; left: 20px;"
/>
`;

exports[`element style HTML update empty style object to undefined 1`] = `<div />`;

exports[`element style HTML update one property different property 1`] = `
<div
  style="left: 20px;"
/>
`;

exports[`element style HTML update one property empty style object 1`] = `
<div
  style=""
/>
`;

exports[`element style HTML update one property property with different value 1`] = `
<div
  style="top: 20px;"
/>
`;

exports[`element style HTML update one property property with same value 1`] = `
<div
  style="top: 10px;"
/>
`;

exports[`element style HTML update one property property with undefined value 1`] = `
<div
  style=""
/>
`;

exports[`element style HTML update one property two properties 1`] = `
<div
  style="top: 10px; left: 20px;"
/>
`;

exports[`element style HTML update one property undefined 1`] = `
<div
  style=""
/>
`;

exports[`element style HTML update property with undefined value empty style object 1`] = `<div />`;

exports[`element style HTML update property with undefined value one property 1`] = `
<div
  style="top: 10px;"
/>
`;

exports[`element style HTML update property with undefined value property with undefined value 1`] = `<div />`;

exports[`element style HTML update property with undefined value two properties 1`] = `
<div
  style="top: 10px; left: 20px;"
/>
`;

exports[`element style HTML update property with undefined value undefined 1`] = `<div />`;

exports[`element style HTML update two properties empty style object 1`] = `
<div
  style=""
/>
`;

exports[`element style HTML update two properties one property with different value 1`] = `
<div
  style="left: 30px;"
/>
`;

exports[`element style HTML update two properties one property with same value 1`] = `
<div
  style="left: 20px;"
/>
`;

exports[`element style HTML update two properties properties with different values 1`] = `
<div
  style="top: 30px; left: 40px;"
/>
`;

exports[`element style HTML update two properties properties with same values 1`] = `
<div
  style="top: 10px; left: 20px;"
/>
`;

exports[`element style HTML update two properties property with undefined value 1`] = `
<div
  style=""
/>
`;

exports[`element style HTML update two properties undefined 1`] = `
<div
  style=""
/>
`;

exports[`element style HTML update undefined to empty style object 1`] = `<div />`;

exports[`element style HTML update undefined to one property 1`] = `
<div
  style="top: 10px;"
/>
`;

exports[`element style HTML update undefined to property with undefined value 1`] = `<div />`;

exports[`element style HTML update undefined to two properties 1`] = `
<div
  style="top: 10px; left: 20px;"
/>
`;

exports[`element style HTML update undefined to undefined 1`] = `<div />`;

exports[`element style SVG mount empty style object 1`] = `<circle />`;

exports[`element style SVG mount one property 1`] = `
<circle
  style="top: 10px;"
/>
`;

exports[`element style SVG mount property with undefined value 1`] = `<circle />`;

exports[`element style SVG mount two properties 1`] = `
<circle
  style="top: 10px; left: 20px;"
/>
`;

exports[`element style SVG mount undefined 1`] = `<circle />`;

exports[`element style SVG update empty style object to empty style object 1`] = `<circle />`;

exports[`element style SVG update empty style object to one property 1`] = `
<circle
  style="top: 10px;"
/>
`;

exports[`element style SVG update empty style object to property with undefined value 1`] = `<circle />`;

exports[`element style SVG update empty style object to two properties 1`] = `
<circle
  style="top: 10px; left: 20px;"
/>
`;

exports[`element style SVG update empty style object to undefined 1`] = `<circle />`;

exports[`element style SVG update one property different property 1`] = `
<circle
  style="left: 20px;"
/>
`;

exports[`element style SVG update one property empty style object 1`] = `
<circle
  style=""
/>
`;

exports[`element style SVG update one property property with different value 1`] = `
<circle
  style="top: 20px;"
/>
`;

exports[`element style SVG update one property property with same value 1`] = `
<circle
  style="top: 10px;"
/>
`;

exports[`element style SVG update one property property with undefined value 1`] = `
<circle
  style=""
/>
`;

exports[`element style SVG update one property two properties 1`] = `
<circle
  style="top: 10px; left: 20px;"
/>
`;

exports[`element style SVG update one property undefined 1`] = `
<circle
  style=""
/>
`;

exports[`element style SVG update property with undefined value empty style object 1`] = `<circle />`;

exports[`element style SVG update property with undefined value one property 1`] = `
<circle
  style="top: 10px;"
/>
`;

exports[`element style SVG update property with undefined value property with undefined value 1`] = `<circle />`;

exports[`element style SVG update property with undefined value two properties 1`] = `
<circle
  style="top: 10px; left: 20px;"
/>
`;

exports[`element style SVG update property with undefined value undefined 1`] = `<circle />`;

exports[`element style SVG update two properties empty style object 1`] = `
<circle
  style=""
/>
`;

exports[`element style SVG update two properties one property with different value 1`] = `
<circle
  style="left: 30px;"
/>
`;

exports[`element style SVG update two properties one property with same value 1`] = `
<circle
  style="left: 20px;"
/>
`;

exports[`element style SVG update two properties properties with different values 1`] = `
<circle
  style="top: 30px; left: 40px;"
/>
`;

exports[`element style SVG update two properties properties with same values 1`] = `
<circle
  style="top: 10px; left: 20px;"
/>
`;

exports[`element style SVG update two properties property with undefined value 1`] = `
<circle
  style=""
/>
`;

exports[`element style SVG update two properties undefined 1`] = `
<circle
  style=""
/>
`;

exports[`element style SVG update undefined to empty style object 1`] = `<circle />`;

exports[`element style SVG update undefined to one property 1`] = `
<circle
  style="top: 10px;"
/>
`;

exports[`element style SVG update undefined to property with undefined value 1`] = `<circle />`;

exports[`element style SVG update undefined to two properties 1`] = `
<circle
  style="top: 10px; left: 20px;"
/>
`;

exports[`element style SVG update undefined to undefined 1`] = `<circle />`;
